...
extension CommitmentFilterLabel on CommitmentFilter {
  String get label {
    switch (this) {
      case CommitmentFilter.all:
        return 'All';
      case CommitmentFilter.bills:
        return 'Bills';
      case CommitmentFilter.subscriptions:
        return 'Subscriptions';
      case CommitmentFilter.loans:
        return 'Loans';
      case CommitmentFilter.dueSoon:
        return 'Due soon';
...
